// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scopes render should correctly render component 1`] = `
<form>
  <form-field-stub>
    <message-stub>
      Application requests following scopes. Press "Allow" button to grant these permissions.
    </message-stub>
  </form-field-stub>
  <div class="form-field"></div>
  <form-controls-stub>
    <v-button-stub skin="primary" size="normal" disabled="true" submit="true" fluid="true" type="primary" data-test="submit-button">
      Allow
    </v-button-stub>
  </form-controls-stub>
  <form-controls-stub>
    <v-button-stub skin="secondary" size="normal" fluid="true" data-test="cancel-button">
      Deny
    </v-button-stub>
  </form-controls-stub>
</form>
`;

exports[`Scopes render should render checkboxes with given scopes 1`] = `
<form>
  <form-field-stub>
    <message-stub>
      Application requests following scopes. Press "Allow" button to grant these permissions.
    </message-stub>
  </form-field-stub>
  <div class="form-field">
    <scopes-checkbox-tree-stub children="[object Object]" valuesmap="[object Object]" level="[object Object]"></scopes-checkbox-tree-stub>
    <scopes-checkbox-tree-stub children="[object Object]" valuesmap="[object Object]" level="[object Object]"></scopes-checkbox-tree-stub>
  </div>
  <form-controls-stub>
    <v-button-stub skin="primary" size="normal" submit="true" fluid="true" type="primary" data-test="submit-button">
      Allow
    </v-button-stub>
  </form-controls-stub>
  <form-controls-stub>
    <v-button-stub skin="secondary" size="normal" fluid="true" data-test="cancel-button">
      Deny
    </v-button-stub>
  </form-controls-stub>
</form>
`;
